--- a/requirements.txt
+++ b/requirements.txt
@@ -22,5 +22,5 @@ email_validator>=2.0
 Flask-Limiter>=3.6.0
 Flask-Bcrypt>=1.0
 reportlab>=4.0
-weasyprint>=60 
-xhtml2pdf>=0.2.11
+weasyprint>=60
+stripe>=7.0,<8.0
